--- a/Style.css
+++ b/Style.css
@@ -79,7 +79,7 @@ table{
 	margin-left:auto;
 }
 #tytul2{
-	background-color:#85b4e4;
+	background-color:#1d2149;
 	width:100%;
 	height:20%;
 	text-align: center;
